@@ -25,6 +25,7 @@ input[type="number"]{
       border-radius:5px;
       -moz-border-radius:5px;
       -webkit-border-radius:5px;
+      padding: 10px !important;
     }
 
  .row.home {
