@@ -31,7 +31,7 @@
 	            <li><a href="aboutus.html"  class="close-panel"><i class="fa fa-star"></i>About Us</a></li>	           
 	            <li><a href="products.html"  class="close-panel"><i class="fa fa-file-o"></i>Products</a></li>
 	            <li><a href="brochure.html"  class="close-panel"><i class="fa fa-file-text-o"></i>Brochure</a></li>
-                <li><a href="contact.html"  class="close-panel"><i class="fa fa-envelope"></i>Contact</a></li>
+                <li><a href="#" onclick="ContactPage();" class="close-panel"><i class="fa fa-envelope"></i>Contact</a></li>
 
                 <div id="beforelogin" style="display:none; padding-left: 4px;">
                 <li><a href="dealer.html"  class="close-panel"><i class="fa fa-envelope"></i>Register as Dealer</a></li>
